// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component History - test History currency USD, privacy high & mode advanced - snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="text translated"
    accessible={true}
    style={
      {
        "display": "flex",
        "flex": 1,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 60,
            "paddingBottom": 0,
            "paddingTop": 10,
          }
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "minHeight": 29,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "margin": 0,
                  "marginHorizontal": 2.5,
                  "minHeight": 25,
                  "minWidth": 25,
                  "padding": 0,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
              >
                <
                  color="red"
                  icon={
                    {
                      "icon": [
                        576,
                        512,
                        [
                          62337,
                          "cloud-download",
                          "cloud-download-alt",
                        ],
                        "f0ed",
                        "M144 480c-79.5 0-144-64.5-144-144 0-63.4 41-117.2 97.9-136.5-1.3-7.7-1.9-15.5-1.9-23.5 0-79.5 64.5-144 144-144 55.4 0 103.5 31.3 127.6 77.1 14.2-8.3 30.8-13.1 48.4-13.1 53 0 96 43 96 96 0 15.7-3.8 30.6-10.5 43.7 44 20.3 74.5 64.7 74.5 116.3 0 70.7-57.3 128-128 128l-304 0zM377 313c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-31 31 0-102.1c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 102.1-31-31c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c9.4 9.4 24.6 9.4 33.9 0l72-72z",
                      ],
                      "iconName": "cloud-arrow-down",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginHorizontal": 5,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "margin": 0,
                    "marginHorizontal": 2.5,
                    "minHeight": 25,
                    "minWidth": 25,
                    "padding": 0,
                  }
                }
              >
                <
                  color="#18bd18"
                  icon={
                    {
                      "icon": [
                        384,
                        512,
                        [
                          128274,
                        ],
                        "f023",
                        "M128 96l0 64 128 0 0-64c0-35.3-28.7-64-64-64s-64 28.7-64 64zM64 160l0-64C64 25.3 121.3-32 192-32S320 25.3 320 96l0 64c35.3 0 64 28.7 64 64l0 224c0 35.3-28.7 64-64 64L64 512c-35.3 0-64-28.7-64-64L0 224c0-35.3 28.7-64 64-64z",
                      ],
                      "iconName": "lock",
                      "prefix": "fas",
                    }
                  }
                  size={25}
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flexDirection": "row",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 36,
                      "fontWeight": "700",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                   -.----
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#011401",
                  "borderRadius": 10,
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "margin": 0,
                  "marginLeft": 5,
                  "minHeight": 25,
                  "minWidth": 25,
                  "padding": 0,
                }
              }
            >
              <
                color="#18bd18"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [
                        "info-circle",
                      ],
                      "f05a",
                      "M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z",
                    ],
                    "iconName": "circle-info",
                    "prefix": "fas",
                  }
                }
                size={25}
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "baseline",
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "baseline",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#ffffff",
                      "fontSize": 20,
                      "fontWeight": "700",
                      "marginBottom": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  $ -.--
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "marginLeft": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "columnGap": 10,
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "justifyContent": "center",
                    "margin": 0,
                    "marginTop": 10,
                    "minHeight": 40,
                    "minWidth": 40,
                    "padding": 5,
                    "rowGap": 5,
                  }
                }
              >
                <
                  color="#18bd18"
                  icon={
                    {
                      "icon": [
                        512,
                        512,
                        [
                          128472,
                          "refresh",
                          "sync",
                        ],
                        "f021",
                        "M65.9 228.5c13.3-93 93.4-164.5 190.1-164.5 53 0 101 21.5 135.8 56.2 .2 .2 .4 .4 .6 .6l7.6 7.2-47.9 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32-14.3 32-32l0-128c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 53.4-11.3-10.7C390.5 28.6 326.5 0 256 0 127 0 20.3 95.4 2.6 219.5 .1 237 12.2 253.2 29.7 255.7s33.7-9.7 36.2-27.1zm443.5 64c2.5-17.5-9.7-33.7-27.1-36.2s-33.7 9.7-36.2 27.1c-13.3 93-93.4 164.5-190.1 164.5-53 0-101-21.5-135.8-56.2-.2-.2-.4-.4-.6-.6l-7.6-7.2 47.9 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L32 320c-8.5 0-16.7 3.4-22.7 9.5S-.1 343.7 0 352.3l1 127c.1 17.7 14.6 31.9 32.3 31.7S65.2 496.4 65 478.7l-.4-51.5 10.7 10.1c46.3 46.1 110.2 74.7 180.7 74.7 129 0 235.7-95.4 253.4-219.5z",
                      ],
                      "iconName": "arrows-rotate",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "padding": 11.5,
            "position": "absolute",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <View
            accessibilityLabel="text translated"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginRight": 5,
                "opacity": 1,
              }
            }
            testID="header.drawmenu"
          >
            <
              color="#ffffff"
              icon={
                {
                  "icon": [
                    448,
                    512,
                    [
                      "navicon",
                    ],
                    "f0c9",
                    "M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z",
                  ],
                  "iconName": "bars",
                  "prefix": "fas",
                }
              }
              size={40}
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.settings"
        >
          <
            color="#ffffff"
            icon={
              {
                "icon": [
                  512,
                  512,
                  [
                    9881,
                    "cog",
                  ],
                  "f013",
                  "M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z",
                ],
                "iconName": "gear",
                "prefix": "fas",
              }
            }
            size={35}
          />
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "marginVertical": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "height": 30,
              "marginHorizontal": 10,
              "width": 30,
            }
          }
        />
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
              "paddingHorizontal": 5,
              "textAlign": "center",
            }
          }
          testID="valuetransfer text"
        >
          text translated
        </Text>
        <View
          style={
            {
              "height": 30,
              "marginHorizontal": 10,
              "width": 30,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#18bd18",
            "height": 1,
            "width": "100%",
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 2,
          "marginHorizontal": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "width": 20,
          }
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "flexDirection": "row",
            "marginRight": 20,
            "marginTop": -35,
            "paddingHorizontal": 1,
            "paddingVertical": 4,
          }
        }
      />
    </View>
    <ActivityIndicator
      color="#18bd18"
      size="large"
      style={
        {
          "marginVertical": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Component History - test History no currency, privacy normal & mode basic - snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="text translated"
    accessible={true}
    style={
      {
        "display": "flex",
        "flex": 1,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 60,
            "paddingBottom": 0,
            "paddingTop": 10,
          }
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "minHeight": 29,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "margin": 0,
                  "marginHorizontal": 2.5,
                  "minHeight": 25,
                  "minWidth": 25,
                  "padding": 0,
                }
              }
            >
              <
                color="red"
                icon={
                  {
                    "icon": [
                      576,
                      512,
                      [
                        62337,
                        "cloud-download",
                        "cloud-download-alt",
                      ],
                      "f0ed",
                      "M144 480c-79.5 0-144-64.5-144-144 0-63.4 41-117.2 97.9-136.5-1.3-7.7-1.9-15.5-1.9-23.5 0-79.5 64.5-144 144-144 55.4 0 103.5 31.3 127.6 77.1 14.2-8.3 30.8-13.1 48.4-13.1 53 0 96 43 96 96 0 15.7-3.8 30.6-10.5 43.7 44 20.3 74.5 64.7 74.5 116.3 0 70.7-57.3 128-128 128l-304 0zM377 313c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-31 31 0-102.1c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 102.1-31-31c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c9.4 9.4 24.6 9.4 33.9 0l72-72z",
                    ],
                    "iconName": "cloud-arrow-down",
                    "prefix": "fas",
                  }
                }
                size={20}
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "marginHorizontal": 5,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "flex-end",
                    "flexDirection": "row",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 36,
                      "fontWeight": "700",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                  testID="undefined.big-part"
                >
                   1.1234
                </Text>
                <Text
                  style={
                    {
                      "color": "#c3c3c3",
                      "fontSize": 25.2,
                      "margin": 0,
                      "marginBottom": 2.4,
                      "padding": 0,
                    }
                  }
                  testID="undefined.small-part"
                >
                  5678
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "padding": 11.5,
            "position": "absolute",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <View
            accessibilityLabel="text translated"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "marginRight": 5,
                "opacity": 1,
              }
            }
            testID="header.drawmenu"
          >
            <
              color="#ffffff"
              icon={
                {
                  "icon": [
                    448,
                    512,
                    [
                      "navicon",
                    ],
                    "f0c9",
                    "M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z",
                  ],
                  "iconName": "bars",
                  "prefix": "fas",
                }
              }
              size={40}
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.settings"
        >
          <
            color="#ffffff"
            icon={
              {
                "icon": [
                  512,
                  512,
                  [
                    9881,
                    "cog",
                  ],
                  "f013",
                  "M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z",
                ],
                "iconName": "gear",
                "prefix": "fas",
              }
            }
            size={35}
          />
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "marginVertical": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "height": 30,
              "marginHorizontal": 10,
              "width": 30,
            }
          }
        />
        <Text
          style={
            {
              "color": "#ffffff",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
              "paddingHorizontal": 5,
              "textAlign": "center",
            }
          }
          testID="valuetransfer text"
        >
          text translated
        </Text>
        <View
          style={
            {
              "height": 30,
              "marginHorizontal": 10,
              "width": 30,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#18bd18",
            "height": 1,
            "width": "100%",
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 2,
          "marginHorizontal": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "width": 20,
          }
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "flexDirection": "row",
            "marginRight": 20,
            "marginTop": -35,
            "paddingHorizontal": 1,
            "paddingVertical": 4,
          }
        }
      />
    </View>
    <ActivityIndicator
      color="#18bd18"
      size="large"
      style={
        {
          "marginVertical": 20,
        }
      }
    />
  </View>
</View>
`;
